--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "1.0.0",
   "scripts": {
     "start": "ts-node src/main.ts",
-    "test": "vitest",
-    "test:nowatch": "vitest run",
-    "test:cov": "vitest --coverage",
-    "test:cov:nowatch": "vitest run --coverage"
+    "test": "jest src/main.test.ts && vitest run src/main.spec.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.5.12",
     "@vitest/coverage-v8": "^1.4.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.3",
     "vitest": "^1.4.0"
