--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Unit test workflows
+name: Unit Test
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
 
 jobs:
   unit-test:
-    name: Unit tests with coverage
+    name: Compare Tests
     runs-on: ubuntu-latest
     env:
       ci: true
