update to use import.meta.url

--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "module-undefined-vitest",
   "version": "1.0.0",
+  "type": "module",
+  "module": "es2020",
   "scripts": {
     "start": "ts-node src/main.ts",
     "test": "jest src/main.test.ts && vitest run src/main.spec.ts"
