--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "module-undefined-vitest",
   "version": "1.0.0",
-  "type": "module",
-  "module": "es2020",
   "scripts": {
-    "start": "ts-node src/main.ts",
-    "test": "jest src/main.test.ts && vitest run src/main.spec.ts"
+    "start": "tsx src/main.ts",
+    "test": "vitest run src/main.spec.ts",
+    "both": "jest src/main.test.ts && vitest run src/main.spec.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +14,7 @@
     "@vitest/coverage-v8": "^1.4.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.4.3",
     "vitest": "^1.4.0"
   }
